@startuml Data Model

entity Humans {
    id SERIAL PRIMARY KEY
    --
    name VARCHAR(30) NOT NULL
    FOREIGN KEY (animal_id) REFERENCES Animals (id) NOT NULL UNIQUE
    FOREIGN KEY (home_location_id) REFERENCES Locations (id)
}

entity AnimalsToPlans {
    FOREIGN KEY (plan_id) REFERENCES Plans (id)
    FOREIGN KEY (animal_id) REFERENCES Animals (id)
    --
}


entity Animals {
    id SERIAL PRIMARY KEY
    --
    FOREIGN KEY (species) REFERENCES Species (id) NOT NULL
    smartness INTEGER CHECK (smartness >= 0)
    FOREIGN KEY (current_location_id) REFERENCES Locations (id) NOT NULL
    FOREIGN KEY (animal_pack_id) REFERENCES AnimalsPacks (id)
}

entity PlansToActions {
    FOREIGN KEY (plan_id) REFERENCES Plans (id)
    FOREIGN KEY (action_id) REFERENCES Actions (id)
    --
}

entity Species {
    id SERIAL PRIMARY KEY
    --
    name VARCHAR(50) NOT NULL UNIQUE
}

entity Actions {
    id SERIAL PRIMARY KEY
    --
    name VARCHAR(100) NOT NULL UNIQUE
    description TEXT NOT NULL
}

entity Plans {
    id SERIAL PRIMARY KEY
    --
    start_time TIMESTAMP
    end_time TIMESTAMP
}

entity Locations {
    id SERIAL PRIMARY KEY
    --
    name char(50) NOT NULL
    description TEXT NOT NULL
    placement POLYGON NOT NULL
}

entity AnimalsPacks {
    id SERIAL PRIMARY KEY
    --
    FOREIGN KEY (leader_animal_id) REFERENCES Animal (id) NOT NULL UNIQUE
    FOREIGN KEY (habitat_location_id) REFERENCES Locations (id) NOT NULL
}


Humans::animal_id |o--|| Animals::id
Humans::home_location_id }o--o| Locations::id

Animals::species }o--|| Species::id
Animals::current_location_id }o--|| Locations::id
Animals::animal_pack_id }|--o| AnimalsPacks::id

Animals::id ||--o{ AnimalsToPlans::animal_id
Plans::id ||--|{ AnimalsToPlans::plan_id

Plans::id ||--|{ PlansToActions::plan_id
Actions::id ||--o{ PlansToActions::action_id

AnimalsPacks::leader_animal_id ||--|| Animals::id

AnimalsPacks::habitat_location_id }o--|| Locations::id

@enduml